CHANGES IN VERSION 2.0.16
-------------------------
    o gisticChromPlot bug fix. Issue: #392
    o annovarToMaf bug fix for results without exonic variants. Issue: #388
    o Avoid conflict with plotly::layout with graphcis::layout. Issue: #387
    o Fix side-bar heights in Oncoplot with copy-number data. Issue: #383
    o Update y-axis label for tcgaCompare plot. Issue: #366
    o annovarToMaf annotating variants with MNPs. Issue: #335

CHANGES IN VERSION 2.0.16
-------------------------
    o Minor bug fix in extractSignatures. Issue #369
    o Added argument ens2hugo to annovarToMaf. Issue #372

CHANGES IN VERSION 2.0.15
-------------------------
    o Bug fix in oncoplot with only 1 variant classification. Issue #367
    o Bug fix with gisticChromPlot. Issue #365
    o Bug fix with plot alignment. Issue #360
    o Update description for lollipopPlot with domain source. Issue #354
    o Optimized method for rank estimation in signature analysis
    o Add barcode_mar and gene_mar to oncoplot and gisticOncoPlot. Issue: #346
    o Add sepwd_genes, sepwd_samples to oncoplot and gisticOncoPlot. Issue: #340 #260
    o Avoid plotting legend outside the margin. Issue: #337
    o Add argument for sample ordering in PlotOncogenicPathways. Issue: #332
    o Add cohortSize argument to oncoplot. Issue: #324
    o coOncoPlot: showing sample names has no effect. Issue: #306

CHANGES IN VERSION 2.0.10
-------------------------
    o Add argument for sample ordering in plotTiTv. Issue: #330
    o Bug fix in annovartomaf which caused wrong annotations for INDLS. Issue: #330

CHANGES IN VERSION 2.0.05
-------------------------
USER-LEVEL IMPROVEMENT
    o merge_mafs - Merge multiple MAF objects, files. Issue: #329
    o Add more examples for oncoplot customization. Issue: #310
    o CoOncoplot - align gene names. Issue: #308
    o Added keepGeneOrder argument to plotVaf. Issue: #305
    o Added sampleOrder argument to gisticOncoPlot. Issue: #302

BUG FIX