@@ -22,6 +22,7 @@ export(lollipopPlot)
 export(lollipopPlot2)
 export(mafCompare)
 export(mafSummary)
+export(mafSurvGroup)
 export(mafSurvival)
 export(math.score)
 export(merge_mafs)
@@ -48,6 +49,7 @@ export(readGistic)
 export(signatureEnrichment)
 export(somaticInteractions)
 export(subsetMaf)
+export(survGroup)
 export(tcgaCompare)
 export(titv)
 export(trinucleotideMatrix)
