@@ -5,7 +5,7 @@
 #' @param mat Input matrix of diemnsion nx96 generated by \code{\link{trinucleotideMatrix}}
 #' @param nTry Maximum number of signatures to try. Default 6.
 #' @param plotBestFitRes plots consensus heatmap for range of values tried. Default FALSE
-#' @param parallel Default 4. Number of cores to use. See note on \code{\link{nmf}} for MAC users.
+#' @param parallel Default 4. Number of cores to use.
 #' @param pConstant A small positive value to add to the matrix. Use it ONLY if the functions throws an \code{non-conformable arrays} error
 #' @return a list with \code{NMF.rank} object and summary stats.
 #' @examples
