@@ -7,7 +7,7 @@
 #' @param mat Input matrix of diemnsion nx96 generated by \code{\link{trinucleotideMatrix}}
 #' @param n decompose matrix into n signatures. Default NULL. Tries to predict best value for \code{n} by running NMF on a range of values and chooses based on cophenetic correlation coefficient.
 #' @param plotBestFitRes plots consensus heatmap for range of values tried. Default FALSE
-#' @param parallel calls to .opt argument of \code{\link{nmf}}. e.g, 'P4' for using 4 cores. See note on \code{\link{nmf}} for MAC users.
+#' @param parallel Default 4. Number of cores to use.
 #' @param pConstant A small positive value to add to the matrix. Use it ONLY if the functions throws an \code{non-conformable arrays} error
 #' @return a list with decomposed scaled signatures, signature contributions in each sample and NMF object.
 #' @examples
@@ -20,7 +20,7 @@
 #' @export
 
 
-extractSignatures = function(mat, n = NULL, plotBestFitRes = FALSE, parallel = NULL, pConstant = NULL){
+extractSignatures = function(mat, n = NULL, plotBestFitRes = FALSE, parallel = 4, pConstant = NULL){
 
     #suppressPackageStartupMessages(require(NMF, quietly = TRUE))
     #transpose matrix
@@ -54,7 +54,7 @@ extractSignatures = function(mat, n = NULL, plotBestFitRes = FALSE, parallel = N
 
     message(paste0('-Running NMF for factorization rank: ', n))
     if(!is.null(parallel)){
-      conv.mat.nmf = NMF::nmf(x = mat, rank = n, .opt = parallel, seed = 123456)
+      conv.mat.nmf = NMF::nmf(x = mat, rank = n, .opt = paste0('P', parallel), seed = 123456)
     }else{
       conv.mat.nmf = NMF::nmf(x = mat, rank = n, seed = 123456)
     }
