@@ -3,7 +3,7 @@
 #' @details This function takes MAF file and groups them based on mutation status associated with given gene(s) and performs survival analysis. Requires dataframe containing survival status and time to event.
 #' Make sure sample names match to Tumor Sample Barcodes from MAF file.
 #' @param maf an \code{\link{MAF}} object generated by \code{\link{read.maf}}
-#' @param genes gene names for which survival analysis needs to be performed.
+#' @param genes gene names for which survival analysis needs to be performed. Samples with mutations in any one of the genes provided are used as mutants.
 #' @param samples samples to group by. Genes and samples are mutually exclusive.
 #' @param clinicalData dataframe containing events and time to events. Default looks for clinical data in annotation slot of \code{\link{MAF}}.
 #' @param time column name contining time in \code{clinicalData}
@@ -110,7 +110,7 @@ mafSurvival = function(maf, genes = NULL, samples = NULL, clinicalData = NULL, t
   message("Median survival..")
   print(clin.mut.dat)
 
-  clinicalData$Time = ifelse(test = is.infinite(clinicalData$Time), yes = 0, no = clinicalData$Time)
+  clinicalData$Time = ifelse(test = is.infinite(clinicalData$Time), yes = NA, no = clinicalData$Time)
 
   if(nrow(clinicalData[!is.na(Time)][!is.na(Status)]) < nrow(clinicalData)){
     message(paste0("Removed ", nrow(clinicalData) - nrow(clinicalData[!is.na(Time)][!is.na(Status)]),
@@ -145,7 +145,7 @@ mafSurvival = function(maf, genes = NULL, samples = NULL, clinicalData = NULL, t
   axis(side = 1, at = x_lims)
   axis(side = 2, at = y_lims, las = 2)
   mtext(text = "Survival probability", side = 2, line = 2.5)
-  mtext(text = "Time", side = 1, line = 2)
+  #mtext(text = "Time", side = 1, line = 2)
 
   legend(x = "topright", legend = c("Mutant", "WT"), col = col, bty = "n", lwd = 2, pch = 8)
 
