@@ -5,7 +5,7 @@
 \title{Extract mutational signatures from trinucleotide context.}
 \usage{
 extractSignatures(mat, n = NULL, plotBestFitRes = FALSE,
-  parallel = NULL, pConstant = NULL)
+  parallel = 4, pConstant = NULL)
 }
 \arguments{
 \item{mat}{Input matrix of diemnsion nx96 generated by \code{\link{trinucleotideMatrix}}}
@@ -14,7 +14,7 @@ extractSignatures(mat, n = NULL, plotBestFitRes = FALSE,
 
 \item{plotBestFitRes}{plots consensus heatmap for range of values tried. Default FALSE}
 
-\item{parallel}{calls to .opt argument of \code{\link{nmf}}. e.g, 'P4' for using 4 cores. See note on \code{\link{nmf}} for MAC users.}
+\item{parallel}{Default 4. Number of cores to use.}
 
 \item{pConstant}{A small positive value to add to the matrix. Use it ONLY if the functions throws an \code{non-conformable arrays} error}
 }
