@@ -13,7 +13,7 @@ mafSurvival(maf, genes = NULL, samples = NULL, clinicalData = NULL,
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
 
-\item{genes}{gene names for which survival analysis needs to be performed.}
+\item{genes}{gene names for which survival analysis needs to be performed. Samples with mutations in any one of the genes provided are used as mutants.}
 
 \item{samples}{samples to group by. Genes and samples are mutually exclusive.}
 
